@@ -1,0 +1,3 @@
+description = "Standard library"
+version = "[distributed with OCaml]"
+directory = "+"
